[package]
authors = ["Glenn Dittmann"]
keywords = ["computer-graphics", "math", "vertex", "clustering"]
name = "vertex_clustering"
repository = "https://github.com/glennDittmann/vertex_clustering"
version = "0.1.2"
edition = "2021"
description = "A simple implementation of vertex clustering."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
